@@ -29,3 +29,4 @@ urllib3==1.22
 websocket-client==0.47.0
 parameterized==0.6.1
 jsondiff==1.1.2
+semver==2.8.1
